some more stuffs

--- a/templates/main.html
+++ b/templates/main.html
@@ -1,7 +1,8 @@
-
 <html>
   <head></head>
   <body>
-  <!-- your page content here -->
+      <div id="navver"></div>
+      <div id="content"></div>
+      <div id="index"></div>
   </body>
 </html>
