made some progress

--- a/templates/main.html
+++ b/templates/main.html
@@ -1,8 +1,15 @@
 <html>
-  <head></head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <head>
+        <title></title>
+        <link rel="stylesheet" href="/styles/main.css"></head>
+        <link rel="shortcut icon" type="image/png" href="/logo.png"/>
+    </head>
   <body>
-      <div id="navver"></div>
+      <div id="header">
+          <img src="/logo.png" alt="flower" width="50" height="50" id="logo">
+          <div id="navigation"></div>
+      </div>
       <div id="content"></div>
-      <div id="index"></div>
   </body>
 </html>
