fixed some things

--- a/templates/navigation.html
+++ b/templates/navigation.html
@@ -1,4 +1,12 @@
-<a href="/">about</a>
-<a href="/projects">projects</a>
-<a href="/blog">blog</a>
-<a href="/cv">resume</a>
+<div class="navbar-item">
+    <a href="/">about</a>
+</div>
+<div class="navbar-item">
+    <a href="/projects">projects</a>
+</div>
+<div class="navbar-item">
+    <a href="/blog">blog</a>
+</div>
+<div class="navbar-item">
+    <a href="/cv">resume</a>
+</div>
