--- a/templates/main.html
+++ b/templates/main.html
@@ -2,17 +2,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <head>
         <title></title>
-        <link rel="stylesheet" href="/styles/main.css"></head>
-        <link rel="shortcut icon" type="image/png" href="/logo.png"/>
+        <link rel="stylesheet" href="/styles/colors.css">
+        <link rel="stylesheet" href="/styles/main.css">
+        <link rel="stylesheet" href="/styles/article.css">
     </head>
-  <body>
-      <div id="name">
-          <h2>Sam Thomas</h2>
-      </div>
-      <div id="header">
-          <img src="/logo.png" alt="flower" width="50" height="50" id="logo">
-          <div id="navigation"></div>
-      </div>
-      <div id="content"></div>
-  </body>
+    <link rel="shortcut icon" type="image/png" href="/logo.png"/>
+    </head>
+    <body>
+        <div id="name">
+            <h2>Sam Thomas</h2>
+        </div>
+        <div id="header">
+            <img src="/logo.png" alt="flower" width="50" height="50" id="logo">
+            <div id="navigation"></div>
+        </div>
+        <div id="content"></div>
+    </body>
 </html>
