--- a/templates/main.html
+++ b/templates/main.html
@@ -5,6 +5,7 @@
         <title></title>
         <link rel="stylesheet" href="/styles/colors.css">
         <link rel="stylesheet" href="/styles/main.css">
+        <link rel="stylesheet" href="/styles/navigation.css">
         <link rel="stylesheet" href="/styles/article.css">
     </head>
     <link rel="shortcut icon" type="image/png" href="/logo.png"/>
