--- a/site/styles/colors.css
+++ b/site/styles/colors.css
@@ -1,15 +1,15 @@
 :root {
     --background-color: white;
-    --text-color: black;
-    --link-color: blue;
-    --border-color: black;
+    --text-color: #001826;
+    --link-color: #0091c9;
+    --border-color: #001826;
 }
 
 @media (prefers-color-scheme: dark) {
     :root {
-        --background-color: #121212;
+        --background-color: #001826;
         --text-color: white;
-        --link-color: lightblue;
+        --link-color: #c297b8;
         --border-color: white;
     }
 }
