--- a/site/styles/main.css
+++ b/site/styles/main.css
@@ -45,3 +45,17 @@ a:visited {
         margin: 0 auto;
     }
 }
+
+#wave {
+    margin: auto;
+    max-width: 700px;
+    height: 40px;
+    /* background-color: gray; */
+}
+
+#spike {
+    margin: auto;
+    max-width: 700px;
+    height: 80px;
+    /* background-color: gray; */
+}
