--- a/templates/main.html
+++ b/templates/main.html
@@ -11,13 +11,25 @@
     <link rel="shortcut icon" type="image/png" href="/logo.png"/>
     </head>
     <body>
+	<div id="wave">
+	    <canvas></canvas>
+	</div>
+
         <div id="name">
-            <h2>Sam Thomas</h2>
+            <h2>Sammy Thomas</h2>
         </div>
+
         <div id="header">
             <img src="/logo.png" alt="flower" width="50" height="50" id="logo">
             <div id="navigation"></div>
         </div>
+
         <div id="content"></div>
+
+	<div id="spike">
+	    <canvas></canvas>
+	</div>
     </body>
+
+    <script src="/scripts/main.js"></script>
 </html>
